--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -26,7 +26,7 @@
 monitor = HDMI-A-1, 1920x1080@60, 0x0, 1, transform, 3
 monitor = DP-2, 2560x1440@165, 1080x222, 1
 monitor = DP-1, 1920x1080@144, 3640x412, 1 
-monitor = ,preferred,auto,auto
+# monitor = ,preferred,auto,auto
 
 
 ###################
@@ -37,8 +37,8 @@ monitor = ,preferred,auto,auto
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
-$menu = rofi -show drun
+$fileManager = thunar
+$menu = /home/yasai/.config/hypr/toggleRofi.sh
 
 
 #################
@@ -51,6 +51,7 @@ $menu = rofi -show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 exec-once = waybar & waypaper --restore
+exec-once = udiskie
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -138,7 +139,7 @@ general {
     gaps_in = 5
     gaps_out = 10
 
-    border_size = 2
+    border_size = 3
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
@@ -224,8 +225,8 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
+    sensitivity = 0.2 # -1.0 - 1.0, 0 means no modification.
+    accel_profile = flat
     touchpad {
         natural_scroll = false
     }
@@ -304,8 +305,9 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 bind = $mainMod, Tab, fullscreen, 1
-bind = $mainMod, F, fullscreen
-
+bind = $mainMod, M, fullscreen
+bind = $mainMod, T, togglefloating
+bind = ALT SHIFT, F, exec, brave
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -319,6 +321,9 @@ bind = $mainMod, F, fullscreen
 
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+
+windowrulev2 = workspace 5,             class:^(steam_app_)(.*)$
+windowrulev2 = fullscreen,              class:^(steam_app_)(.*)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
