--- a/config/fastfetch/config.jsonc
+++ b/config/fastfetch/config.jsonc
@@ -1,7 +1,8 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source": "~/Pictures/images/fastfetch.png"
+    "source": "~/.config/fastfetch/logo1.png",
+    "width": 59,
   },
   "display": {
   	"separator": "  ",
@@ -11,7 +12,7 @@
     "title",
     {
     	"type": "custom",
-	"format": "────────────────────────────────────────────────────────────────"
+	"format": "──────────────────────────────────────────────────────────"
     },
     {
     	"type": "custom",
@@ -28,7 +29,7 @@
         "keyColor": "cyan"
     },
     {
-        "type": "packages", 
+        "type": "packages",
         "key": "├─",
         "keyColor": "cyan"
     },
